--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
         <a href="">Shop gifts <i class="fas fa-chevron-right fa-xs"></i></a>
       </div>
 
-      <div class="images-1"></div>
+      <div class="images-1">
+        <div>
+          <img src="/assets/img/airpods__b0941p5gmwj6_medium_2x.png" alt="" />
+        </div>
+        <div>
+          <img src="/assets/img/ipad__bq6djchifrbm_medium_2x.png" alt="" />
+        </div>
+        <div>
+          <img src="/assets/img/iphone__cyamwsdph26a_medium_2x.png" alt="" />
+        </div>
+      </div>
     </div>
     <div class="page-2"></div>
     <div class="page-3"></div>
