--- a/index.html
+++ b/index.html
@@ -62,8 +62,38 @@
         </div>
       </div>
     </div>
-    <div class="page-2"></div>
-    <div class="page-3"></div>
+    <div class="page-2">
+      <header>iPhone 13 Pro</header>
+      <div>
+        <p>Oh. So. Pro.</p>
+      </div>
+      <div>
+        <p>
+          <a href=""
+            >Learn more
+            <i class="fas fa-chevron-right fa-xs"></i
+            >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+            <i class="fas fa-chevron-right fa-xs"></i></a
+          ><a href=""></a>
+        </p>
+      </div>
+    </div>
+    <div class="page-3">
+      <header>iPhone 13 </header>
+      <div>
+        <p>Your new superpower</p>
+      </div>
+      <div>
+        <p>
+          <a href=""
+            >Learn more
+            <i class="fas fa-chevron-right fa-xs"></i
+            >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+            <i class="fas fa-chevron-right fa-xs"></i></a
+          ><a href=""></a>
+        </p>
+      </div>
+    </div>
     <div class="page-4"></div>
     <div class="page-5"></div>
   </body>
