--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Apple</title>
   </head>
   <body>
     <header>
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="page-3">
-      <header>iPhone 13 </header>
+      <header>iPhone 13</header>
       <div>
         <p>Your new superpower</p>
       </div>
@@ -94,7 +94,14 @@
         </p>
       </div>
     </div>
-    <div class="page-4"></div>
+    <div class="page-4">
+      <div class="div1">.</div>
+      <div class="div2">.</div>
+      <div class="div3">.</div>
+      <div class="div4">.</div>
+      <div class="div5">.</div>
+      <div class="div6">.</div>
+    </div>
     <div class="page-5"></div>
   </body>
 </html>
