--- a/index.html
+++ b/index.html
@@ -95,12 +95,98 @@
       </div>
     </div>
     <div class="page-4">
-      <div class="div1">.</div>
-      <div class="div2">.</div>
-      <div class="div3">.</div>
-      <div class="div4">.</div>
-      <div class="div5">.</div>
-      <div class="div6">.</div>
+      <div class="div1">
+        <header>MacBook Pro</header>
+        <div>
+          <p>Supercharged for pros.</p>
+        </div>
+        <div>
+          <p>
+            <a href=""
+              >Learn more
+              <i class="fas fa-chevron-right fa-xs"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+              <i class="fas fa-chevron-right fa-xs"></i></a
+            ><a href=""></a>
+          </p>
+        </div>
+      </div>
+      <div class="div2">
+        <header>AirPods</header>
+        <div>
+          <p>All-new with Spatial Audio</p>
+        </div>
+        <div>
+          <p>
+            <a href=""
+              >Learn more
+              <i class="fas fa-chevron-right fa-xs"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+              <i class="fas fa-chevron-right fa-xs"></i></a
+            ><a href=""></a>
+          </p>
+        </div>
+      </div>
+      <div class="div3">
+        <header>Homepod mini</header>
+        <div>
+          <p>All-new with Spatial Audio</p>
+        </div>
+        <div>
+          <p>
+            <a href=""
+              >Learn more
+              <i class="fas fa-chevron-right fa-xs"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+              <i class="fas fa-chevron-right fa-xs"></i></a
+            ><a href=""></a>
+          </p>
+        </div>
+      </div>
+      <div class="div4">
+        <p>New</p>
+        <header><i class="fab fa-apple fa-lg"></i>WATCH</header>
+        <div>
+          <p>SERIES 7</p>
+          <p>Introducing our largest display yet.</p>
+        </div>
+        <div>
+          <p>
+            <a href=""
+              >Learn more
+              <i class="fas fa-chevron-right fa-xs"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+              <i class="fas fa-chevron-right fa-xs"></i></a
+            ><a href=""></a>
+          </p>
+        </div>
+      </div>
+      <div class="div5">
+        <header><i class="fab fa-apple fa-md"></i>Card</header>
+        <div>
+          <p>SERIES 7</p>
+          <p>Get up to 3% Daily Cash back</p>
+          <p>with every purchase</p>
+        </div>
+        <div>
+          <p>
+            <a href=""
+              >Learn more
+              <i class="fas fa-chevron-right fa-xs"></i
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+              <i class="fas fa-chevron-right fa-xs"></i></a
+            ><a href=""></a>
+          </p>
+        </div>
+      </div>
+      <div class="div6">
+        <header><i class="fab fa-apple fa-md"></i>tv+</header>
+        <div>
+          <p>Dickinson</p>
+          <p>Hope is worth every fight</p>
+          <a href=""><p>Stream the new season</p></a>
+        </div>
+      </div>
     </div>
     <div class="page-5"></div>
   </body>
