--- a/index.html
+++ b/index.html
@@ -128,10 +128,7 @@
         </div>
       </div>
       <div class="div3">
-        <header>Homepod mini</header>
-        <div>
-          <p>All-new with Spatial Audio</p>
-        </div>
+        <header>HomePod mini</header>
         <div>
           <p>
             <a href=""
@@ -144,11 +141,11 @@
         </div>
       </div>
       <div class="div4">
-        <p>New</p>
+        <p class="p-top">New</p>
         <header><i class="fab fa-apple fa-lg"></i>WATCH</header>
         <div>
-          <p>SERIES 7</p>
-          <p>Introducing our largest display yet.</p>
+          <p class="p-middle1">SERIES 7</p>
+          <p class="p-middle2">Introducing our largest display yet.</p>
         </div>
         <div>
           <p>
@@ -164,7 +161,6 @@
       <div class="div5">
         <header><i class="fab fa-apple fa-md"></i>Card</header>
         <div>
-          <p>SERIES 7</p>
           <p>Get up to 3% Daily Cash back</p>
           <p>with every purchase</p>
         </div>
@@ -173,7 +169,7 @@
             <a href=""
               >Learn more
               <i class="fas fa-chevron-right fa-xs"></i
-              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy
+              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apply now
               <i class="fas fa-chevron-right fa-xs"></i></a
             ><a href=""></a>
           </p>
@@ -182,12 +178,39 @@
       <div class="div6">
         <header><i class="fab fa-apple fa-md"></i>tv+</header>
         <div>
-          <p>Dickinson</p>
-          <p>Hope is worth every fight</p>
+          <img
+            src="/assets/img/logo_dickinson_title__exfqr7iiyc8y_large.png"
+            alt=""
+          />
+
           <a href=""><p>Stream the new season</p></a>
         </div>
       </div>
     </div>
-    <div class="page-5"></div>
+    <div class="page-5">
+      <div class="top-text">
+        <p>
+          To access and use all the features of Apple Card, you must add Apple
+          Card to Wallet on an iPhone or iPad with the latest version of iOS or
+          iPadOS. Update to the latest version by going to Settings > General >
+          Software Update. Tap Download and Install.
+        </p>
+        <p>Available for qualifying applicants in the United States.</p>
+        <p>
+          Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City Branch
+        </p>
+        <p>
+          Learn more about how Apple Card applications are evaluated at
+          <a href="">support.apple.com/kb/HT209218.</a>
+        </p>
+        <p>
+          Apple TV+ is $4.99/month after free trial. One subscription per Family
+          Sharing group. Offer good for 3 months after eligible device
+          activation. Plan automatically renews until cancelled. Restrictions
+          and other terms apply.
+        </p>
+        
+      </div>
+    </div>
   </body>
 </html>
