--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="assets/img/favicon.ico" type="image/icon type" />
     <title>Apple</title>
   </head>
   <body>
@@ -187,13 +188,14 @@
         </div>
       </div>
     </div>
-    <div class="page-5">
+    <footer>
       <div class="top-text">
         <p>
           To access and use all the features of Apple Card, you must add Apple
           Card to Wallet on an iPhone or iPad with the latest version of iOS or
-          iPadOS. Update to the latest version by going to Settings > General >
-          Software Update. Tap Download and Install.
+          iPadOS. Update to the latest version <br />
+          by going to Settings > General > Software Update. Tap Download and
+          Install.
         </p>
         <p>Available for qualifying applicants in the United States.</p>
         <p>
@@ -206,11 +208,106 @@
         <p>
           Apple TV+ is $4.99/month after free trial. One subscription per Family
           Sharing group. Offer good for 3 months after eligible device
-          activation. Plan automatically renews until cancelled. Restrictions
-          and other terms apply.
+          activation. Plan automatically renews until <br />
+          cancelled. Restrictions and other terms apply.
         </p>
-        
       </div>
-    </div>
+      <hr />
+      <div>
+        <header>Shop and Learn</header>
+        <p><a href="">Store</a></p>
+        <p><a href="">Mac</a></p>
+        <p><a href="">iPad</a></p>
+        <p><a href="">iPhone</a></p>
+        <p><a href="">Watch</a></p>
+        <p><a href="">AirPods</a></p>
+        <p><a href="">TV & Home</a></p>
+        <p><a href="">iPod touch</a></p>
+        <p><a href="">AirTag</a></p>
+        <p><a href="">Accessories</a></p>
+        <p><a href="">Gift Cards</a></p>
+      </div>
+      <div>
+        <div>
+          <header>Services</header>
+          <p><a href="">Apple Music</a></p>
+          <p><a href="">Apple TV+</a></p>
+          <p><a href="">Apple Fitness+</a></p>
+          <p><a href="">Apple Fitness+</a></p>
+          <p><a href="">Apple Arcade</a></p>
+          <p><a href="">iCloud</a></p>
+          <p><a href="">Apple One</a></p>
+          <p><a href="">Apple Card</a></p>
+          <p><a href="">Apple Books</a></p>
+          <p><a href="">Apple Podcasts</a></p>
+          <p><a href="">App Store</a></p>
+        </div>
+        <div>
+          <header>Account</header>
+          <p><a href="">Manage Your Apple ID</a></p>
+          <p><a href="">Apple Store Account</a></p>
+          <p><a href="">iCloud.com</a></p>
+        </div>
+      </div>
+      <div>
+        <header>Apple Store</header>
+        <p><a href="">Find a store</a></p>
+        <p><a href="">Genius</a></p>
+        <p><a href="">Today at Apple</a></p>
+        <p><a href="">Apple Camp</a></p>
+        <p><a href="">Apple Store App</a></p>
+        <p><a href="">Refurbished and Clearance</a></p>
+        <p><a href="">Financing</a></p>
+        <p><a href="">Apple Trade In</a></p>
+        <p><a href="">Order Status</a></p>
+        <p><a href="">Shopping Help</a></p>
+      </div>
+      <div>
+        <div>
+          <header>For Business</header>
+          <p><a href="">Apple and Business</a></p>
+          <p><a href="">Shop for Business</a></p>
+        </div>
+        <div>
+          <header>For Education</header>
+          <p><a href="">Apple and Education</a></p>
+          <p><a href="">Shop for K-12</a></p>
+          <p><a href="">Shop for College</a></p>
+        </div>
+        <div>
+          <header>For Healthcare</header>
+          <p><a href="">Apple in Healthcare</a></p>
+          <p><a href="">Health on Apple Watch</a></p>
+          <p><a href="">Health Records on iPhone</a></p>
+        </div>
+        <div>
+          <header>For Government</header>
+          <p><a href="">Shop for Government</a></p>
+          <p><a href="">Shop for Veterans and Military</a></p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <header>Apple Values</header>
+          <p><a href="">Accessability</a></p>
+          <p><a href="">Education</a></p>
+          <p><a href="">Environment</a></p>
+          <p><a href="">Inclusion and Diversity</a></p>
+          <p><a href="">Privacy</a></p>
+          <p><a href="">Racial Equity and Justice</a></p>
+          <p><a href="">Supplier Responsibility</a></p>
+        </div>
+        <div>
+          <header>About Apple</header>
+          <p><a href="">Newsroom</a></p>
+          <p><a href="">Apple Leadership</a></p>
+          <p><a href="">Career Opportunities</a></p>
+          <p><a href="">Investors</a></p>
+          <p><a href="">Ethics & Compliance</a></p>
+          <p><a href="">Events</a></p>
+          <p><a href="">Contact Apple</a></p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
