--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/dist/css/normalize.css" />
     <link rel="stylesheet" href="/dist/css/main.css" />
-    <link rel="stylesheet" href="/dist/css/page1.css" />
+    <!-- <link rel="stylesheet" href="/dist/css/page1.css" /> -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
@@ -17,7 +17,7 @@
     <title>Apple</title>
   </head>
   <body>
-    <header>
+    
       <nav>
         <ul>
           <li><i class="fab fa-apple fa-lg"></i></li>
@@ -35,7 +35,7 @@
           <li><i class="fas fa-shopping-bag"></i></li>
         </ul>
       </nav>
-    </header>
+    
     <div class="page-1">
       <div class="red-strip">
         <p>
@@ -189,124 +189,147 @@
       </div>
     </div>
     <footer>
-      <div class="top-text">
+      <div class="text-container">
+        <div class="top-text">
+          <p>
+            To access and use all the features of Apple Card, you must add Apple
+            Card to Wallet on an iPhone or iPad with the latest version of iOS
+            or iPadOS. Update to the latest version <br />
+            by going to Settings > General > Software Update. Tap Download and
+            Install.
+          </p>
+          <p>Available for qualifying applicants in the United States.</p>
+          <p>
+            Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City
+            Branch
+          </p>
+          <p>
+            Learn more about how Apple Card applications are evaluated at
+            <a href="">support.apple.com/kb/HT209218.</a>
+          </p>
+          <p>
+            Apple TV+ is $4.99/month after free trial. One subscription per
+            Family Sharing group. Offer good for 3 months after eligible device
+            activation. Plan automatically renews until <br />
+            cancelled. Restrictions and other terms apply.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="link-container">
+        <div class="one">
+          <header>Shop and Learn</header>
+          <p><a href="">Store</a></p>
+          <p><a href="">Mac</a></p>
+          <p><a href="">iPad</a></p>
+          <p><a href="">iPhone</a></p>
+          <p><a href="">Watch</a></p>
+          <p><a href="">AirPods</a></p>
+          <p><a href="">TV & Home</a></p>
+          <p><a href="">iPod touch</a></p>
+          <p><a href="">AirTag</a></p>
+          <p><a href="">Accessories</a></p>
+          <p><a href="">Gift Cards</a></p>
+        </div>
+        <div class="two">
+          <div>
+            <header>Services</header>
+            <p><a href="">Apple Music</a></p>
+            <p><a href="">Apple TV+</a></p>
+            <p><a href="">Apple Fitness+</a></p>
+            <p><a href="">Apple Fitness+</a></p>
+            <p><a href="">Apple Arcade</a></p>
+            <p><a href="">iCloud</a></p>
+            <p><a href="">Apple One</a></p>
+            <p><a href="">Apple Card</a></p>
+            <p><a href="">Apple Books</a></p>
+            <p><a href="">Apple Podcasts</a></p>
+            <p><a href="">App Store</a></p>
+          </div>
+          <div>
+            <header>Account</header>
+            <p><a href="">Manage Your Apple ID</a></p>
+            <p><a href="">Apple Store Account</a></p>
+            <p><a href="">iCloud.com</a></p>
+          </div>
+        </div>
+        <div class="three">
+          <header>Apple Store</header>
+          <p><a href="">Find a store</a></p>
+          <p><a href="">Genius</a></p>
+          <p><a href="">Today at Apple</a></p>
+          <p><a href="">Apple Camp</a></p>
+          <p><a href="">Apple Store App</a></p>
+          <p><a href="">Refurbished and Clearance</a></p>
+          <p><a href="">Financing</a></p>
+          <p><a href="">Apple Trade In</a></p>
+          <p><a href="">Order Status</a></p>
+          <p><a href="">Shopping Help</a></p>
+        </div>
+        <div class="four">
+          <div>
+            <header>For Business</header>
+            <p><a href="">Apple and Business</a></p>
+            <p><a href="">Shop for Business</a></p>
+          </div>
+          <div>
+            <header>For Education</header>
+            <p><a href="">Apple and Education</a></p>
+            <p><a href="">Shop for K-12</a></p>
+            <p><a href="">Shop for College</a></p>
+          </div>
+          <div>
+            <header>For Healthcare</header>
+            <p><a href="">Apple in Healthcare</a></p>
+            <p><a href="">Health on Apple Watch</a></p>
+            <p><a href="">Health Records on iPhone</a></p>
+          </div>
+          <div>
+            <header>For Government</header>
+            <p><a href="">Shop for Government</a></p>
+            <p><a href="">Shop for Veterans and Military</a></p>
+          </div>
+        </div>
+        <div class="five">
+          <div>
+            <header>Apple Values</header>
+            <p><a href="">Accessability</a></p>
+            <p><a href="">Education</a></p>
+            <p><a href="">Environment</a></p>
+            <p><a href="">Inclusion and Diversity</a></p>
+            <p><a href="">Privacy</a></p>
+            <p><a href="">Racial Equity and Justice</a></p>
+            <p><a href="">Supplier Responsibility</a></p>
+          </div>
+          <div>
+            <header>About Apple</header>
+            <p><a href="">Newsroom</a></p>
+            <p><a href="">Apple Leadership</a></p>
+            <p><a href="">Career Opportunities</a></p>
+            <p><a href="">Investors</a></p>
+            <p><a href="">Ethics & Compliance</a></p>
+            <p><a href="">Events</a></p>
+            <p><a href="">Contact Apple</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="more">
         <p>
-          To access and use all the features of Apple Card, you must add Apple
-          Card to Wallet on an iPhone or iPad with the latest version of iOS or
-          iPadOS. Update to the latest version <br />
-          by going to Settings > General > Software Update. Tap Download and
-          Install.
-        </p>
-        <p>Available for qualifying applicants in the United States.</p>
-        <p>
-          Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City Branch
-        </p>
-        <p>
-          Learn more about how Apple Card applications are evaluated at
-          <a href="">support.apple.com/kb/HT209218.</a>
-        </p>
-        <p>
-          Apple TV+ is $4.99/month after free trial. One subscription per Family
-          Sharing group. Offer good for 3 months after eligible device
-          activation. Plan automatically renews until <br />
-          cancelled. Restrictions and other terms apply.
+          More ways to shop: <a href="">Find an Apple Store</a> or
+          <a href="">other retailer</a> near you. Or call 1-800-MY-APPLE.
         </p>
       </div>
       <hr />
-      <div>
-        <header>Shop and Learn</header>
-        <p><a href="">Store</a></p>
-        <p><a href="">Mac</a></p>
-        <p><a href="">iPad</a></p>
-        <p><a href="">iPhone</a></p>
-        <p><a href="">Watch</a></p>
-        <p><a href="">AirPods</a></p>
-        <p><a href="">TV & Home</a></p>
-        <p><a href="">iPod touch</a></p>
-        <p><a href="">AirTag</a></p>
-        <p><a href="">Accessories</a></p>
-        <p><a href="">Gift Cards</a></p>
-      </div>
-      <div>
-        <div>
-          <header>Services</header>
-          <p><a href="">Apple Music</a></p>
-          <p><a href="">Apple TV+</a></p>
-          <p><a href="">Apple Fitness+</a></p>
-          <p><a href="">Apple Fitness+</a></p>
-          <p><a href="">Apple Arcade</a></p>
-          <p><a href="">iCloud</a></p>
-          <p><a href="">Apple One</a></p>
-          <p><a href="">Apple Card</a></p>
-          <p><a href="">Apple Books</a></p>
-          <p><a href="">Apple Podcasts</a></p>
-          <p><a href="">App Store</a></p>
+      <div class="bottom">
+        <p class="copyright">Copyright © 2021 Apple Inc. All rights reserved.</p>
+        <div class="policies">
+          <p><a href="">Privacy Policy |</a></p>
+          <p><a href="">Terms of Use |</a></p>
+          <p><a href="">Sales and Refunds |</a></p>
+          <p><a href="">Legal |</a></p>
+          <p><a href="">Site Map |</a></p>
         </div>
-        <div>
-          <header>Account</header>
-          <p><a href="">Manage Your Apple ID</a></p>
-          <p><a href="">Apple Store Account</a></p>
-          <p><a href="">iCloud.com</a></p>
-        </div>
-      </div>
-      <div>
-        <header>Apple Store</header>
-        <p><a href="">Find a store</a></p>
-        <p><a href="">Genius</a></p>
-        <p><a href="">Today at Apple</a></p>
-        <p><a href="">Apple Camp</a></p>
-        <p><a href="">Apple Store App</a></p>
-        <p><a href="">Refurbished and Clearance</a></p>
-        <p><a href="">Financing</a></p>
-        <p><a href="">Apple Trade In</a></p>
-        <p><a href="">Order Status</a></p>
-        <p><a href="">Shopping Help</a></p>
-      </div>
-      <div>
-        <div>
-          <header>For Business</header>
-          <p><a href="">Apple and Business</a></p>
-          <p><a href="">Shop for Business</a></p>
-        </div>
-        <div>
-          <header>For Education</header>
-          <p><a href="">Apple and Education</a></p>
-          <p><a href="">Shop for K-12</a></p>
-          <p><a href="">Shop for College</a></p>
-        </div>
-        <div>
-          <header>For Healthcare</header>
-          <p><a href="">Apple in Healthcare</a></p>
-          <p><a href="">Health on Apple Watch</a></p>
-          <p><a href="">Health Records on iPhone</a></p>
-        </div>
-        <div>
-          <header>For Government</header>
-          <p><a href="">Shop for Government</a></p>
-          <p><a href="">Shop for Veterans and Military</a></p>
-        </div>
-      </div>
-      <div>
-        <div>
-          <header>Apple Values</header>
-          <p><a href="">Accessability</a></p>
-          <p><a href="">Education</a></p>
-          <p><a href="">Environment</a></p>
-          <p><a href="">Inclusion and Diversity</a></p>
-          <p><a href="">Privacy</a></p>
-          <p><a href="">Racial Equity and Justice</a></p>
-          <p><a href="">Supplier Responsibility</a></p>
-        </div>
-        <div>
-          <header>About Apple</header>
-          <p><a href="">Newsroom</a></p>
-          <p><a href="">Apple Leadership</a></p>
-          <p><a href="">Career Opportunities</a></p>
-          <p><a href="">Investors</a></p>
-          <p><a href="">Ethics & Compliance</a></p>
-          <p><a href="">Events</a></p>
-          <p><a href="">Contact Apple</a></p>
-        </div>
+        <div><p>United States</p></div>
       </div>
     </footer>
   </body>
