--- a/accessories.html
+++ b/accessories.html
@@ -36,7 +36,7 @@
     </nav>
     <div class="white-strip">
       <p>Accessories</p>
-      <a href="">Browse all<i class="fas fa-chevron-down fa-xs"></i></a>
+      <a href="">Browse all &nbsp; <i class="fas fa-chevron-down fa-xs"></i></a>
     </div>
     <div class="page1">
       <div class="container">
