Browse by category

--- a/accessories.html
+++ b/accessories.html
@@ -60,5 +60,14 @@
         </div>
       </div>
     </div>
+    <div class="page2">
+      <header>Find the accessories you're looking for.</header>
+      <div class="container">
+        <div class="fontuser">
+          <input type="search" placeholder="Search accessories" name="uname" />
+          <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
