--- a/accessories.html
+++ b/accessories.html
@@ -19,7 +19,9 @@
   <body>
     <nav>
       <ul>
-        <li><i class="fab fa-apple fa-lg"></i></li>
+        <li>
+          <a href="/index.html"><i class="fab fa-apple fa-lg"></i></a>
+        </li>
         <li>Store</li>
         <li>Mac</li>
         <li>iPad</li>
@@ -66,6 +68,39 @@
         <div class="fontuser">
           <input type="search" placeholder="Search accessories" name="uname" />
           <i class="fa fa-search fa-lg"></i>
+        </div>
+      </div>
+    </div>
+    <div class="page3">
+      <p>Browse by Category &nbsp;&nbsp;&nbsp;&nbsp; Browse by product</p>
+
+      <div class="category-container">
+        <div id="border-top"></div>
+        <div class="images-container">
+          <div>
+            <img
+              src="/assets/img/access/category-icon-made-by-apple.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img src="/assets/img/access/category-icon-whats-new.png" alt="" />
+          </div>
+          <div>
+            <img
+              src="/assets/img/access/icon-category-cases-protection.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              src="/assets/img/access/icon-category-audio-music.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img src="/assets/img/access/category-icon-gifts.png" alt="" />
+          </div>
         </div>
       </div>
     </div>
