--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
       <nav>
         <ul>
-          <li><i class="fab fa-apple fa-lg"></i></li>
+          <li><a href=""><i class="fab fa-apple fa-lg"></i></a> </li>
           <li>Store</li>
           <li>Mac</li>
           <li>iPad</li>
@@ -30,7 +30,7 @@
           <li>AirPods</li>
           <li>TV & Home</li>
           <li>Only on Apple</li>
-          <li>Accessories</li>
+          <li><a href="/accessories.html">Accessories</a></li>
           <li>Support</li>
           <li><i class="fas fa-search"></i></li>
           <li><i class="fas fa-shopping-bag"></i></li>
