--- a/accessories.html
+++ b/accessories.html
@@ -82,26 +82,33 @@
               src="/assets/img/access/category-icon-made-by-apple.png"
               alt=""
             />
+            <p>Made by apple</p>
           </div>
           <div>
-            <img src="/assets/img/access/category-icon-whats-new.png" alt="" />
+            <img src="/assets/img/access/category-icon-whats-new.png" alt="" /><p>What's New</p>
           </div>
           <div>
             <img
               src="/assets/img/access/icon-category-cases-protection.png"
               alt=""
             />
+            <p>Cases & Protection</p>
           </div>
           <div>
             <img
               src="/assets/img/access/icon-category-audio-music.png"
               alt=""
             />
+            <p>Headphones & Speakers</p>
           </div>
           <div>
             <img src="/assets/img/access/category-icon-gifts.png" alt="" />
+            <p>Gifts</p>
           </div>
         </div>
+        <div id="border-bottom-left"></div>
+        <a href=""><p>See all categories &nbsp;<i class="fas fa-plus-circle"></i></p></a>
+        <div id="border-bottom-right"></div>
       </div>
     </div>
   </body>
