--- a/accessories.html
+++ b/accessories.html
@@ -73,7 +73,6 @@
     </div>
     <div class="page3">
       <p>Browse by Category &nbsp;&nbsp;&nbsp;&nbsp; Browse by product</p>
-
       <div class="category-container">
         <div id="border-top"></div>
         <div class="images-container">
@@ -85,7 +84,8 @@
             <p>Made by apple</p>
           </div>
           <div>
-            <img src="/assets/img/access/category-icon-whats-new.png" alt="" /><p>What's New</p>
+            <img src="/assets/img/access/category-icon-whats-new.png" alt="" />
+            <p>What's New</p>
           </div>
           <div>
             <img
@@ -107,8 +107,59 @@
           </div>
         </div>
         <div id="border-bottom-left"></div>
-        <a href=""><p>See all categories &nbsp;<i class="fas fa-plus-circle"></i></p></a>
+        <a href=""
+          ><p>See all categories &nbsp;<i class="fas fa-plus-circle"></i></p
+        ></a>
         <div id="border-bottom-right"></div>
+      </div>
+    </div>
+    <div class="page4">
+      <header>Featured Apple Accessories</header>
+      <div class="parent-top">
+        <div class="div1">
+          <div class="p-couple">
+            <p class="new">New</p>
+            <p>
+              iPhone 13 Pro Silicone Case with <br />
+              MagSafe
+            </p>
+            <p>$49.90</p>
+          </div>
+        </div>
+        <div class="div2">
+          <div class="p-couple">
+            <p class="new">New</p>
+            <p>iPhone 13 Leather Case with MagSafe</p>
+            <p></p>
+            <p>$59.90</p>
+          </div>
+        </div>
+      </div>
+      <div class="parent-bottom">
+        <div class="div1">
+          <div class="p-couple">
+            <p class="new">Free Engraving</p>
+            <p>AirTag</p>
+            <p></p>
+            <p>$29.90</p>
+          </div>
+        </div>
+        <div class="div2">
+          <div class="p-couple">
+            <p class="new">New</p>
+            <p>Braided Solo Loop</p>
+            <p></p>
+            <p>$99.90</p>
+          </div>
+        </div>
+        <div class="div3">
+          <div class="p-couple">
+            <p class="new">New</p>
+            <p>Smart Folio for iPad mini</p>
+            <p></p>
+            <p>$59.90</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
