--- a/accessories.html
+++ b/accessories.html
@@ -140,7 +140,7 @@
           <div class="p-couple">
             <p class="new">Free Engraving</p>
             <p>AirTag</p>
-            <p></p>
+
             <p>$29.90</p>
           </div>
         </div>
@@ -148,7 +148,6 @@
           <div class="p-couple">
             <p class="new">New</p>
             <p>Braided Solo Loop</p>
-            <p></p>
             <p>$99.90</p>
           </div>
         </div>
@@ -156,11 +155,104 @@
           <div class="p-couple">
             <p class="new">New</p>
             <p>Smart Folio for iPad mini</p>
-            <p></p>
+
             <p>$59.90</p>
           </div>
         </div>
       </div>
+      <div>
+        <p class="shop">
+          Shop Apple accessories &nbsp;<i
+            class="fas fa-chevron-right fa-xs"
+          ></i>
+        </p>
+      </div>
+    </div>
+
+    <div class="page5">
+      <header>Wireless Headphones</header>
+      <div class="parent-bottom">
+        <div class="div1">
+          <div class="p-couple">
+            <p class="new">New</p>
+            <p>AirPods (3rd generation)</p>
+
+            <p>$179.90</p>
+          </div>
+        </div>
+        <div class="div2">
+          <div class="p-couple">
+            <p class="new">Free Engraving</p>
+            <p>AirPods Pro</p>
+            <p>$249.90</p>
+          </div>
+        </div>
+        <div class="div3">
+          <div class="p-couple">
+            <p class="new">Free Engraving</p>
+            <p>AirPods Max - Silver</p>
+            <p>$549.90</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <p class="shop">
+          Shop All Wireless Headphones &nbsp;<i
+            class="fas fa-chevron-right fa-xs"
+          ></i>
+        </p>
+      </div>
+    </div>
+    <div class="page6">
+      <div class="holiday-text"><h1>Let the holidays be filled with great gifts.</h1></div>
+      <div class="shop-gifts">
+        <a href="">Shop now <i class="fas fa-chevron-right fa-xs"></i></a>
+      </div>
+
+      <div class="images-1">
+        <div>
+          <img src="/assets/img/airpods__b0941p5gmwj6_medium_2x.png" alt="" />
+        </div>
+        <div>
+          <img src="/assets/img/ipad__bq6djchifrbm_medium_2x.png" alt="" />
+        </div>
+        <div>
+          <img src="/assets/img/iphone__cyamwsdph26a_medium_2x.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="page7">
+      <header>Wireless Headphones</header>
+      <div class="parent-bottom">
+        <div class="div1">
+          <div class="p-couple">
+            <p class="new">New</p>
+            <p>AirPods (3rd generation)</p>
+
+            <p>$179.90</p>
+          </div>
+        </div>
+        <div class="div2">
+          <div class="p-couple">
+            <p class="new">Free Engraving</p>
+            <p>AirPods Pro</p>
+            <p>$249.90</p>
+          </div>
+        </div>
+        <div class="div3">
+          <div class="p-couple">
+            <p class="new">Free Engraving</p>
+            <p>AirPods Max - Silver</p>
+            <p>$549.90</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <p class="shop">
+          Shop All Wireless Headphones &nbsp;<i
+            class="fas fa-chevron-right fa-xs"
+          ></i>
+        </p>
     </div>
   </body>
 </html>
