--- a/accessories.html
+++ b/accessories.html
@@ -204,7 +204,9 @@
       </div>
     </div>
     <div class="page6">
-      <div class="holiday-text"><h1>Let the holidays be filled with great gifts.</h1></div>
+      <div class="holiday-text">
+        <h1>Let the holidays be filled with great gifts.</h1>
+      </div>
       <div class="shop-gifts">
         <a href="">Shop now <i class="fas fa-chevron-right fa-xs"></i></a>
       </div>
@@ -222,37 +224,246 @@
       </div>
     </div>
     <div class="page7">
-      <header>Wireless Headphones</header>
+      <header>There’s even more to love this season.</header>
       <div class="parent-bottom">
         <div class="div1">
           <div class="p-couple">
             <p class="new">New</p>
-            <p>AirPods (3rd generation)</p>
-
-            <p>$179.90</p>
+            <p>MagSafe Battery Pack</p>
+            <p>$99.90</p>
           </div>
         </div>
         <div class="div2">
           <div class="p-couple">
-            <p class="new">Free Engraving</p>
+            <p>Incase Reform Sport Case for</p>
             <p>AirPods Pro</p>
-            <p>$249.90</p>
+            <p>$34.95</p>
           </div>
         </div>
         <div class="div3">
           <div class="p-couple">
             <p class="new">Free Engraving</p>
-            <p>AirPods Max - Silver</p>
-            <p>$549.90</p>
+            <p>Apple Pencil (2nd generation)</p>
+            <p>$129.00</p>
           </div>
         </div>
       </div>
       <div>
         <p class="shop">
-          Shop All Wireless Headphones &nbsp;<i
-            class="fas fa-chevron-right fa-xs"
-          ></i>
+          Shop gifts &nbsp;<i class="fas fa-chevron-right fa-xs"></i>
         </p>
+      </div>
     </div>
+    <div class="page8">
+      <div class="holiday-text">
+        <h1>You’ve never heard color like this.</h1>
+      </div>
+      <div class="p-couple">
+        <p>Made to fill every room with rich 360‑degree</p>
+        <p>audio. Now available in five colors.</p>
+      </div>
+      <div class="shop-gifts">
+        <a href=""
+          >Shop HomePod mini<i class="fas fa-chevron-right fa-xs"></i
+        ></a>
+      </div>
+
+      <div class="images-1">
+        <div>
+          <img
+            src="/assets/img/access/homepod-mini-accessories-202110.jfif"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+    <div class="page9">
+      <section>
+        <div class="one">
+          <i class="fas fa-box fa-2x"></i>
+          <header>Two-hour delivery</header>
+          <p>Available in most metros</p>
+          <a href="">Learn more<i class="fas fa-chevron-right fa-xs"></i></a>
+        </div>
+        <div class="two">
+          <i class="fas fa-box-open fa-2x"></i>
+          <header>Free and easy returns</header>
+          <p>
+            Complete your return online or <br />
+            take it to an Apple Store
+          </p>
+          <a href="">Learn more<i class="fas fa-chevron-right fa-xs"></i></a>
+        </div>
+        <div class="three">
+          <i class="far fa-calendar-alt fa-2x"></i>
+          <header>Apple Card Monthly Installments</header>
+          <p>
+            Pay for your new Apple products over time, <br />
+            interest-free with Apple Card.
+          </p>
+          <a href="">Learn more<i class="fas fa-chevron-right fa-xs"></i></a>
+        </div>
+      </section>
+    </div>
+    <div class="page10">
+      <section>
+        <div>
+          <p>
+            ◊ Apple Card Monthly Installments (ACMI) is a 0% APR payment option
+            available to select at checkout for certain Apple products purchased
+            at Apple Store locations, apple.com(Opens in a new window), the
+            Apple Store app, or by calling 1-800-MY-APPLE, and is subject to
+            credit approval and credit limit. See
+            https://support.apple.com/kb/HT211204(Opens in a new window) for
+            more information about eligible products. Variable APRs for Apple
+            Card other than ACMI range from 10.99% to 21.99% based on
+            creditworthiness. Rates as of April 1, 2020. If you choose the
+            pay-in-full or one-time-payment option for an ACMI eligible purchase
+            instead of choosing ACMI as the payment option at checkout, that
+            purchase will be subject to the variable APR assigned to your Apple
+            Card. Taxes and shipping are not included in ACMI and are subject to
+            your card’s variable APR. See the Apple Card Customer
+            Agreement(Opens in a new window) for more information. ACMI is not
+            available for purchases made online at the following special stores:
+            Apple Employee Purchase Plan; participating corporate Employee
+            Purchase Programs; Apple at Work for small businesses; Government,
+            and Veterans and Military Purchase Programs, or on refurbished
+            devices. iPhone activation required on iPhone purchases made at an
+            Apple Store with one of these national carriers: AT&T, Sprint,
+            Verizon, or T-Mobile. To access and use all the features of Apple
+            Card, you must add Apple Card to Wallet on an iPhone or iPad with
+            the latest version of iOS or iPadOS. Update to the latest version by
+            going to Settings > General > Software Update. Tap Download and
+            Install. Available for qualifying applicants in the United States.
+            Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City
+            Branch. * The Apple One free trial includes only services that you
+            are not currently using through a free trial or a subscription. Plan
+            automatically renews after trial until cancelled. Restrictions and
+            other terms apply. †† We approximate your location from your
+            internet IP address by matching it to a geographic region or from
+            the location entered during your previous visit to Apple.
+          </p>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div class="link-container">
+        <div class="one">
+          <header>Shop and Learn</header>
+          <p><a href="">Store</a></p>
+          <p><a href="">Mac</a></p>
+          <p><a href="">iPad</a></p>
+          <p><a href="">iPhone</a></p>
+          <p><a href="">Watch</a></p>
+          <p><a href="">AirPods</a></p>
+          <p><a href="">TV & Home</a></p>
+          <p><a href="">iPod touch</a></p>
+          <p><a href="">AirTag</a></p>
+          <p><a href="">Accessories</a></p>
+          <p><a href="">Gift Cards</a></p>
+        </div>
+        <div class="two">
+          <div>
+            <header>Services</header>
+            <p><a href="">Apple Music</a></p>
+            <p><a href="">Apple TV+</a></p>
+            <p><a href="">Apple Fitness+</a></p>
+            <p><a href="">Apple Fitness+</a></p>
+            <p><a href="">Apple Arcade</a></p>
+            <p><a href="">iCloud</a></p>
+            <p><a href="">Apple One</a></p>
+            <p><a href="">Apple Card</a></p>
+            <p><a href="">Apple Books</a></p>
+            <p><a href="">Apple Podcasts</a></p>
+            <p><a href="">App Store</a></p>
+          </div>
+          <div>
+            <header>Account</header>
+            <p><a href="">Manage Your Apple ID</a></p>
+            <p><a href="">Apple Store Account</a></p>
+            <p><a href="">iCloud.com</a></p>
+          </div>
+        </div>
+        <div class="three">
+          <header>Apple Store</header>
+          <p><a href="">Find a store</a></p>
+          <p><a href="">Genius</a></p>
+          <p><a href="">Today at Apple</a></p>
+          <p><a href="">Apple Camp</a></p>
+          <p><a href="">Apple Store App</a></p>
+          <p><a href="">Refurbished and Clearance</a></p>
+          <p><a href="">Financing</a></p>
+          <p><a href="">Apple Trade In</a></p>
+          <p><a href="">Order Status</a></p>
+          <p><a href="">Shopping Help</a></p>
+        </div>
+        <div class="four">
+          <div>
+            <header>For Business</header>
+            <p><a href="">Apple and Business</a></p>
+            <p><a href="">Shop for Business</a></p>
+          </div>
+          <div>
+            <header>For Education</header>
+            <p><a href="">Apple and Education</a></p>
+            <p><a href="">Shop for K-12</a></p>
+            <p><a href="">Shop for College</a></p>
+          </div>
+          <div>
+            <header>For Healthcare</header>
+            <p><a href="">Apple in Healthcare</a></p>
+            <p><a href="">Health on Apple Watch</a></p>
+            <p><a href="">Health Records on iPhone</a></p>
+          </div>
+          <div>
+            <header>For Government</header>
+            <p><a href="">Shop for Government</a></p>
+            <p><a href="">Shop for Veterans and Military</a></p>
+          </div>
+        </div>
+        <div class="five">
+          <div>
+            <header>Apple Values</header>
+            <p><a href="">Accessability</a></p>
+            <p><a href="">Education</a></p>
+            <p><a href="">Environment</a></p>
+            <p><a href="">Inclusion and Diversity</a></p>
+            <p><a href="">Privacy</a></p>
+            <p><a href="">Racial Equity and Justice</a></p>
+            <p><a href="">Supplier Responsibility</a></p>
+          </div>
+          <div>
+            <header>About Apple</header>
+            <p><a href="">Newsroom</a></p>
+            <p><a href="">Apple Leadership</a></p>
+            <p><a href="">Career Opportunities</a></p>
+            <p><a href="">Investors</a></p>
+            <p><a href="">Ethics & Compliance</a></p>
+            <p><a href="">Events</a></p>
+            <p><a href="">Contact Apple</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="more">
+        <p>
+          More ways to shop: <a href="">Find an Apple Store</a> or
+          <a href="">other retailer</a> near you. Or call 1-800-MY-APPLE.
+        </p>
+      </div>
+      
+      <div class="bottom">
+        <p class="copyright">
+          Copyright © 2021 Apple Inc. All rights reserved.
+        </p>
+        <div class="policies">
+          <p><a href="">Privacy Policy |</a></p>
+          <p><a href="">Terms of Use |</a></p>
+          <p><a href="">Sales and Refunds |</a></p>
+          <p><a href="">Legal |</a></p>
+          <p><a href="">Site Map |</a></p>
+        </div>
+        <div><p>United States</p></div>
+      </div>
+    </footer>
   </body>
 </html>
