--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
     <title>Apple</title>
   </head>
   <body>
-    
-      <nav>
-        <ul>
-          <li><a href=""><i class="fab fa-apple fa-lg"></i></a> </li>
-          <li>Store</li>
-          <li>Mac</li>
-          <li>iPad</li>
-          <li>iPhone</li>
-          <li>Watch</li>
-          <li>AirPods</li>
-          <li>TV & Home</li>
-          <li>Only on Apple</li>
-          <li><a href="/accessories.html">Accessories</a></li>
-          <li>Support</li>
-          <li><i class="fas fa-search"></i></li>
-          <li><i class="fas fa-shopping-bag"></i></li>
-        </ul>
-      </nav>
-    
+    <nav>
+      <ul>
+        <li>
+          <a href=""><i class="fab fa-apple fa-lg"></i></a>
+        </li>
+        <li>Store</li>
+        <li>Mac</li>
+        <li>iPad</li>
+        <li>iPhone</li>
+        <li>Watch</li>
+        <li>AirPods</li>
+        <li>TV & Home</li>
+        <li>Only on Apple</li>
+        <li><a href="/accessories.html">Accessories</a></li>
+        <li>Support</li>
+        <li><i class="fas fa-search"></i></li>
+        <li><i class="fas fa-shopping-bag"></i></li>
+      </ul>
+    </nav>
+
     <div class="page-1">
       <div class="red-strip">
         <p>
@@ -322,7 +323,9 @@
       </div>
       <hr />
       <div class="bottom">
-        <p class="copyright">Copyright © 2021 Apple Inc. All rights reserved.</p>
+        <p class="copyright">
+          Copyright © 2021 Apple Inc. All rights reserved.
+        </p>
         <div class="policies">
           <p><a href="">Privacy Policy |</a></p>
           <p><a href="">Terms of Use |</a></p>
