--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <li><i class="fas fa-shopping-bag"></i></li>
       </ul>
     </nav>
-
     <div class="page-1">
       <div class="red-strip">
         <p>
@@ -191,33 +190,34 @@
       </div>
     </div>
     <footer>
-      <div class="text-container">
-        <div class="top-text">
-          <p>
-            To access and use all the features of Apple Card, you must add Apple
-            Card to Wallet on an iPhone or iPad with the latest version of iOS
-            or iPadOS. Update to the latest version <br />
-            by going to Settings > General > Software Update. Tap Download and
-            Install.
-          </p>
-          <p>Available for qualifying applicants in the United States.</p>
-          <p>
-            Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City
-            Branch
-          </p>
-          <p>
-            Learn more about how Apple Card applications are evaluated at
-            <a href="">support.apple.com/kb/HT209218.</a>
-          </p>
-          <p>
-            Apple TV+ is $4.99/month after free trial. One subscription per
-            Family Sharing group. Offer good for 3 months after eligible device
-            activation. Plan automatically renews until <br />
-            cancelled. Restrictions and other terms apply.
-          </p>
+      <div class="container">
+        <div class="text-container">
+          <div class="top-text">
+            <p>
+              To access and use all the features of Apple Card, you must add
+              Apple Card to Wallet on an iPhone or iPad with the latest version
+              of iOS or iPadOS. Update to the latest version <br />
+              by going to Settings > General > Software Update. Tap Download and
+              Install.
+            </p>
+            <p>Available for qualifying applicants in the United States.</p>
+            <p>
+              Apple Card is issued by Goldman Sachs Bank USA, Salt Lake City
+              Branch
+            </p>
+            <p>
+              Learn more about how Apple Card applications are evaluated at
+              <a href="">support.apple.com/kb/HT209218.</a>
+            </p>
+            <p>
+              Apple TV+ is $4.99/month after free trial. One subscription per
+              Family Sharing group. Offer good for 3 months after eligible
+              device activation. Plan automatically renews until <br />
+              cancelled. Restrictions and other terms apply.
+            </p>
+          </div>
         </div>
       </div>
-      <hr />
       <div class="link-container">
         <div class="one">
           <header>Shop and Learn</header>
@@ -321,7 +321,6 @@
           <a href="">other retailer</a> near you. Or call 1-800-MY-APPLE.
         </p>
       </div>
-      <hr />
       <div class="bottom">
         <p class="copyright">
           Copyright © 2021 Apple Inc. All rights reserved.
